Add db connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/database
+spring.datasource.url=jdbc:postgresql://localhost:5432/smart-home-rasp
 spring.datasource.username=postgres
 spring.datasource.password=1qa2ws#ED
 
